<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:weightSum="8"
    android:paddingTop="40dp"
    tools:context="com.example.shivani.loginapplication.MainActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:gravity="center_horizontal"
      android:layout_weight="7" >
    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="45dp"
        android:textColor="#ffffff" 
        android:textStyle="bold" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@color/colorPrimary">
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="#ffffff"
            android:textColor="#ffffff"
            android:textCursorDrawable="@null"
            android:layout_marginTop="50dp"
            android:backgroundTint="#ffffff"
            android:typeface="serif"></EditText>
        <requestFocus />
    </android.support.design.widget.TextInputLayout>
       <android.support.design.widget.TextInputLayout
           android:id="@+id/password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="10dp"
           app:hintTextAppearance="@color/colorPrimary"
           app:passwordToggleDrawable="@drawable/toggle_button"
           app:passwordToggleEnabled="true">
           <EditText
               android:id="@+id/editPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:ems="10"
               android:hint="@string/password"
               android:inputType="numberPassword|textPassword"
               android:password="true"
               android:textColorHint="#ffffff"
               android:textColor="@color/white"
               android:textCursorDrawable="@null"
               android:layout_marginTop="10dp"
               android:backgroundTint="#ffffff"
               android:typeface="serif"></EditText>
           <requestFocus />
       </android.support.design.widget.TextInputLayout>
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/forgot_password"
           android:textColor="@color/white"
           android:layout_marginTop="3dp"
           android:gravity="right" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_marginTop="30dp"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:background="@drawable/button_style"
        android:elevation="12dp"
        android:textAllCaps="false"
        android:clickable="true"
        android:typeface="serif"/>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:gravity="center">
        <View
            android:layout_width="70dp"
            android:layout_height="0.5dp"
            android:background="@color/white"
            android:layout_gravity="center"></View>
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="12dp"
        android:text="@string/or"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
       
        <View
            android:layout_width="70dp"
            android:layout_height="0.5dp"
            android:background="@color/white"
            android:layout_gravity="center"></View>

</LinearLayout>
       <com.facebook.login.widget.LoginButton
           android:id="@+id/fbSignInBtn"
           android:layout_width="30dp"
           android:layout_height="30dp" />
   </LinearLayout>
    <TextView
        android:id="@+id/no_account"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:text="Don't have an account? Sign Up."
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:gravity="center"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="#22ffffff"
        android:typeface="serif"/>
    </LinearLayout>
